--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
             <form class="login" method="GET" action="loged-in.html">
                 <input id="user" type="text" name="user" placeholder="Nombre de usuario"/>
                 <input id="pass" ="pass" type="password" name="pass" placeholder="Contraseña" />
-                <input id="sub" type="submit" value="Sign In" class="btn btn-success btn-sm" />
+                <input id="sub" type="submit" value="Sign In" onclick="validar();return false;" class="btn btn-success btn-sm" />
             <div class="remember-forgot">
                 <div class="row">
                 <div class="col-md-6">
