--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="sign-up.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                    <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    <li><a href="/pages/sign-up.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                    <li><a href="/pages/login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -76,21 +76,21 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('img/cyberdyne-1.jpg');"></div>
+                <div class="fill" style="background-image:url('/resources/img/cyberdyne-1.jpg');"></div>
                 <div class="carousel-caption">
                     <h1>Bienvenidos a Cyberdyne Systems</h1>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('img/cyberdyne-2.jpg');"></div>
+                <div class="fill" style="background-image:url('/resources/img/cyberdyne-2.jpg');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 2</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('img/cyberdyne-3.jpeg');"></div>
+                <div class="fill" style="background-image:url('/resources/img/cyberdyne-3.jpeg');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 3</h2>
                 </div>
