--- a/pages/login.html
+++ b/pages/login.html
@@ -13,10 +13,10 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/form.css" rel="stylesheet">
-    <script src="js/form.js"></script>
-    <script src="js/jquery.js"></script>
+    <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/form.css" rel="stylesheet">
+    <script src="../resources/js/form.js"></script>
+    <script src="../resources/js/jquery.js"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
