--- a/pages/login.html
+++ b/pages/login.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Full Slider - Start Bootstrap Template</title>
+    <title>Cyberdyne Systems</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
