--- a/footer.html
+++ b/footer.html
@@ -1,9 +1,14 @@
 <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
-                </div>
-            </div>
-            <!-- /.row -->
-        </footer>
+<footer class="container">
+     <div class="row ">
+         <div class="col-lg-12">
+              <p class="text-center">Copyright &copy; Your Website 2014</p>
+        </div>
+    </div>
+</footer>
+
+
+
+
+        <!--<p class="pull-right"><a href="#">Back to top</a></p>
+<p>&copy; 2016 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>-->
