--- a/pages/slide.html
+++ b/pages/slide.html
@@ -1,4 +1,6 @@
  <!-- Full Page Image Background Carousel Header -->
+<div class="container-fluid">
+    
     <header id="myCarousel" class="carousel slide">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -41,6 +43,7 @@
         </a>
 
     </header>
+</div>
 
         <!-- Script to Activate the Carousel -->
     <script>
